// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text field Disabled renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m"
      disabled=""
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Invalid renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            This is the error message
    </div>
    <input
      class="ecl-text-input ecl-text-input--invalid ecl-text-input--m"
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Optional renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m"
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Optional renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m"
      data-test="data-test-value"
      data-test-1="data-test-value-1"
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Optional renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m custom-class custom-class--test"
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Optional renders correctly with extra group class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-group-class custom-group-class--test"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m"
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Optional renders correctly with extra label class names 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label custom-label-class custom-label-class--test"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
         (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m"
      id="example-input-id-1"
      placeholder="Placeholder text"
      type="text"
    />
  </div>
</jest>
`;

exports[`Text field Required renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="example-input-id-1"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <input
      class="ecl-text-input ecl-text-input--m"
      id="example-input-id-1"
      placeholder="Placeholder text"
      required=""
      type="text"
    />
  </div>
</jest>
`;
